# smart-invest

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline_daily.bat  start_backend.bat
.agent/agents/: investment-specialist.md
aim/allocation/: __init__.py  engine.py
aim/auth/: __init__.py  manager.py
aim/backtest/: __init__.py  engine.py
aim/config/: parameters.py  settings.py
aim/data_layer/: database.py
aim/enrichment/: __init__.py  output.py
aim/features/: __init__.py  engine.py  liquidity.py  momentum.py  volatility.py
aim/intent/: __init__.py  parser.py
aim/portfolio/: rebalancing.py
aim/regime/: __init__.py  calculator.py  engine.py
aim/risk/: __init__.py  first.py  manager.py
aim/scoring/: __init__.py  calculator.py  dynamic.py  engine.py
aim/security/: __init__.py  audit.py
aim/sentiment/: __init__.py  scorer.py
aim/utils/: logger.py
api/: main.py
api/routers/: __init__.py  auth.py  (+6 more)
data/: auto_update_state.json  backtest_results.json  stress_test_report.md
docs/: DADOS_REAIS.md  MANIFESTO_TECNICO_v1.0.md  aim_proxima_fase_execucao_mvp.md  aim_proxima_fase_motor_quantitativo.md  aim_v1_arquitetura_motor_quantitativo.md  aim_v1_sistema_inteligencia_investimentos.md  modelo_macro_v1_brasil.md  plano_saas_inteligencia_investimentos.md
frontend/: package-lock.json  package.json  playwright.config.ts
scripts/: add_ibovespa.py  add_ibovespa_yf.py  calc_features_fast.py  calc_features_historical.py  check_data.py  check_dates.py  check_db_structure.py  check_features.py  check_features_range.py  check_ibov.py  check_scores.py  check_signals.py  check_system_status.py  cli.py  collect_fundamentals.py  collect_macro_data.py  create_users_table.py  daily_pipeline.py  daily_update.py  debug_auth.py  debug_auth_complete.py  debug_features.py  debug_portfolio.py  demo_full_flow.py  diagnostico_banco.py  fetch_historical.py  fetch_historical_years.py  import_csv.py  init_database.py  paper_trading.py  quick_test.py  retry_failed.py  run_backtest.py  seed_demo.py  stress_tests.py  test_api.py  test_api_portfolio.py  test_auth.py  test_macro_sentiment.py  test_pipeline.py  (+2 more)
(+39 files in other folders)
