[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-invest"
version = "0.1.0"
description = "Sistema de inteligência estratégica para investimentos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Private"}
authors = [
    {name = "Rodrigo", email = "seu@email.com"},
]
keywords = ["investments", "quantitative", "brazil", "b3", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "httpx>=0.26.0",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpretty>=1.1.4",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240106",
]

[project.scripts]
smart-invest = "scripts.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (black handles this)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
